--- a/katse.html
+++ b/katse.html
@@ -73,7 +73,7 @@
         <section>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb bg-white my-2 ml-2">
-                    <li class="breadcrumb-item active" aria-current="page">Avaleht</li>
+                    <li class="breadcrumb-item"><a href="ylesanne3.html">Avaleht</a></li>
 					<li class="breadcrumb-item active">Meist</li>
                 </ol>
             </nav>  
