--- a/cart.html
+++ b/cart.html
@@ -72,7 +72,7 @@
             <!-- breadcrumb -->
             <nav aria-label="breadcrumb" >
                 <ol class="breadcrumb bg-white my-2">
-                    <li class="breadcrumb-item"><a href="index.html">Avaleht</a></li>
+                    <li class="breadcrumb-item"><a href="ylesanne3.html">Avaleht</a></li>
                     <li class="breadcrumb-item active">Ostukorv</li>
                 </ol>
             </nav>
